@@ -1,4 +1,5 @@
 3.6
+ * Do not wrap CassandraException in TriggerExecutor (CASSANDRA-9421)
  * Remove hard-coded SSL cipher suites and protocols (CASSANDRA-10508)
  * Improve concurrency in CompactionStrategyManager (CASSANDRA-10099)
  * (cqlsh) interpret CQL type for formatting blobs (CASSANDRA-11274)
